@@ -1,4 +1,6 @@
 2011-10-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-78
+	* Fix bug75952: Add StopEditing functionality to TreeTable Class
 	* Refresh paths and sequences top nodes in the TreeModel when 
 	  a module name is changed. bug 83721.
 
